-- ================================================================
--  SQL Server Schema - Clinica Trinidad
--  Base de datos: clinica_trinidad
--  Ejecutar en SSMS o sqlcmd antes de levantar el proyecto
--  Se puede re-ejecutar para resetear la base de datos
-- ================================================================

-- ================================================================
--  LIMPIEZA PREVIA (orden inverso de FK)
-- ================================================================

DROP TABLE IF EXISTS ROL_PERMISO;
DROP TABLE IF EXISTS PERMISO;
DROP TABLE IF EXISTS ANTECEDENTE;
DROP TABLE IF EXISTS MEDICACION_ACTUAL;
DROP TABLE IF EXISTS TRIAJE;
DROP TABLE IF EXISTS AUDITORIA_LOG;
DROP TABLE IF EXISTS PASSWORD_RESET_TOKEN;
DROP TABLE IF EXISTS PAGO;
DROP TABLE IF EXISTS ORDEN_EXAMEN;
DROP TABLE IF EXISTS DETALLE_RECETA;
DROP TABLE IF EXISTS RECETA;
DROP TABLE IF EXISTS ATENCION;
DROP TABLE IF EXISTS DIAGNOSTICO_CIE10;
DROP TABLE IF EXISTS CITA;
DROP TABLE IF EXISTS HISTORIA_CLINICA;
DROP TABLE IF EXISTS HORARIO_MEDICO;
DROP TABLE IF EXISTS MEDICO;
DROP TABLE IF EXISTS ESPECIALIDAD;
DROP TABLE IF EXISTS PACIENTE;
DROP TABLE IF EXISTS USUARIO_ROL;
DROP TABLE IF EXISTS USUARIO;
DROP TABLE IF EXISTS ROL;

DROP SEQUENCE IF EXISTS SEQ_PERMISO;
DROP SEQUENCE IF EXISTS SEQ_ANTECEDENTE;
DROP SEQUENCE IF EXISTS SEQ_MEDICACION_ACTUAL;
DROP SEQUENCE IF EXISTS SEQ_TRIAJE;
DROP SEQUENCE IF EXISTS SEQ_ROL;
DROP SEQUENCE IF EXISTS SEQ_USUARIO;
DROP SEQUENCE IF EXISTS SEQ_PACIENTE;
DROP SEQUENCE IF EXISTS SEQ_ESPECIALIDAD;
DROP SEQUENCE IF EXISTS SEQ_MEDICO;
DROP SEQUENCE IF EXISTS SEQ_HORARIO_MEDICO;
DROP SEQUENCE IF EXISTS SEQ_HISTORIA_CLINICA;
DROP SEQUENCE IF EXISTS SEQ_CITA;
DROP SEQUENCE IF EXISTS SEQ_ATENCION;
DROP SEQUENCE IF EXISTS SEQ_RECETA;
DROP SEQUENCE IF EXISTS SEQ_DETALLE_RECETA;
DROP SEQUENCE IF EXISTS SEQ_ORDEN_EXAMEN;
DROP SEQUENCE IF EXISTS SEQ_PAGO;
DROP SEQUENCE IF EXISTS SEQ_AUDITORIA_LOG;
DROP SEQUENCE IF EXISTS SEQ_PASSWORD_RESET;
DROP SEQUENCE IF EXISTS SEQ_INTENTO_LOGIN;

-- ================================================================
--  SECUENCIAS (usadas por Hibernate via @SequenceGenerator)
-- ================================================================

CREATE SEQUENCE SEQ_ANTECEDENTE       START WITH 1 INCREMENT BY 1;
CREATE SEQUENCE SEQ_MEDICACION_ACTUAL START WITH 1 INCREMENT BY 1;
CREATE SEQUENCE SEQ_TRIAJE            START WITH 1 INCREMENT BY 1;
CREATE SEQUENCE SEQ_ROL              START WITH 1 INCREMENT BY 1;
CREATE SEQUENCE SEQ_USUARIO          START WITH 1 INCREMENT BY 1;
CREATE SEQUENCE SEQ_PACIENTE         START WITH 1 INCREMENT BY 1;
CREATE SEQUENCE SEQ_ESPECIALIDAD     START WITH 1 INCREMENT BY 1;
CREATE SEQUENCE SEQ_MEDICO           START WITH 1 INCREMENT BY 1;
CREATE SEQUENCE SEQ_HORARIO_MEDICO   START WITH 1 INCREMENT BY 1;
CREATE SEQUENCE SEQ_HISTORIA_CLINICA START WITH 1 INCREMENT BY 1;
CREATE SEQUENCE SEQ_CITA             START WITH 1 INCREMENT BY 1;
CREATE SEQUENCE SEQ_ATENCION         START WITH 1 INCREMENT BY 1;
CREATE SEQUENCE SEQ_RECETA           START WITH 1 INCREMENT BY 1;
CREATE SEQUENCE SEQ_DETALLE_RECETA   START WITH 1 INCREMENT BY 1;
CREATE SEQUENCE SEQ_ORDEN_EXAMEN     START WITH 1 INCREMENT BY 1;
CREATE SEQUENCE SEQ_PAGO             START WITH 1 INCREMENT BY 1;
CREATE SEQUENCE SEQ_AUDITORIA_LOG    START WITH 1 INCREMENT BY 1;
CREATE SEQUENCE SEQ_PERMISO          START WITH 1 INCREMENT BY 1;
CREATE SEQUENCE SEQ_INTENTO_LOGIN    START WITH 1 INCREMENT BY 1;
CREATE SEQUENCE SEQ_PASSWORD_RESET   START WITH 1 INCREMENT BY 1;

-- ================================================================
--  CREACION DE TABLAS
-- ================================================================

-- 0) PERMISO (permisos granulares CRUD por módulo)
CREATE TABLE PERMISO (
    ID_PERMISO   BIGINT        NOT NULL,
    NOMBRE       VARCHAR(60)   NOT NULL,
    DESCRIPCION  VARCHAR(200),
    RECURSO      VARCHAR(50)   NOT NULL,
    ACCION       VARCHAR(20)   NOT NULL,
    ACTIVO       INT           DEFAULT 1 NOT NULL,
    CONSTRAINT PK_PERMISO        PRIMARY KEY (ID_PERMISO),
    CONSTRAINT UQ_PERMISO_NOMBRE UNIQUE (NOMBRE),
    CONSTRAINT CK_PERMISO_ACTIVO CHECK (ACTIVO IN (0, 1))
);

-- 1) ROL
CREATE TABLE ROL (
    ID_ROL        BIGINT        NOT NULL,
    NOMBRE        VARCHAR(30)   NOT NULL,
    DESCRIPCION   VARCHAR(200),
    ACTIVO        INT           DEFAULT 1 NOT NULL,
    CONSTRAINT PK_ROL        PRIMARY KEY (ID_ROL),
    CONSTRAINT UQ_ROL_NOMBRE UNIQUE (NOMBRE),
    CONSTRAINT CK_ROL_ACTIVO CHECK (ACTIVO IN (0, 1))
);

-- 1b) ROL_PERMISO (asignación de permisos a roles)
CREATE TABLE ROL_PERMISO (
    ID_ROL     BIGINT NOT NULL,
    ID_PERMISO BIGINT NOT NULL,
    CONSTRAINT PK_ROL_PERMISO PRIMARY KEY (ID_ROL, ID_PERMISO),
    CONSTRAINT FK_RP_ROL     FOREIGN KEY (ID_ROL)     REFERENCES ROL (ID_ROL),
    CONSTRAINT FK_RP_PERMISO FOREIGN KEY (ID_PERMISO) REFERENCES PERMISO (ID_PERMISO)
);

-- 2) USUARIO
CREATE TABLE USUARIO (
    ID_USUARIO        BIGINT        NOT NULL,
    USERNAME          VARCHAR(50)   NOT NULL,
    PASSWORD_HASH     VARCHAR(255)  NOT NULL,
    EMAIL             VARCHAR(120)  NOT NULL,
    ACTIVO            INT           DEFAULT 1 NOT NULL,
    INTENTOS_FALLIDOS INT           DEFAULT 0 NOT NULL,
    BLOQUEADO         INT           DEFAULT 0 NOT NULL,
    FECHA_CREACION    DATETIME2     DEFAULT SYSDATETIME() NOT NULL,
    FECHA_ULT_LOGIN   DATETIME2,
    CONSTRAINT PK_USUARIO       PRIMARY KEY (ID_USUARIO),
    CONSTRAINT UQ_USUARIO_USER  UNIQUE (USERNAME),
    CONSTRAINT UQ_USUARIO_EMAIL UNIQUE (EMAIL),
    CONSTRAINT CK_USUARIO_ACTIVO CHECK (ACTIVO IN (0, 1)),
    CONSTRAINT CK_USUARIO_BLOQ   CHECK (BLOQUEADO IN (0, 1))
);

-- 3) USUARIO_ROL
CREATE TABLE USUARIO_ROL (
    ID_USUARIO BIGINT NOT NULL,
    ID_ROL     BIGINT NOT NULL,
    CONSTRAINT PK_USUARIO_ROL PRIMARY KEY (ID_USUARIO, ID_ROL),
    CONSTRAINT FK_UR_USUARIO  FOREIGN KEY (ID_USUARIO) REFERENCES USUARIO (ID_USUARIO) ON DELETE CASCADE,
    CONSTRAINT FK_UR_ROL      FOREIGN KEY (ID_ROL)     REFERENCES ROL (ID_ROL)
);

-- 4) PACIENTE
CREATE TABLE PACIENTE (
    ID_PACIENTE      BIGINT        NOT NULL,
    ID_USUARIO       BIGINT,
    DNI              VARCHAR(8)    NOT NULL,
    NOMBRES          VARCHAR(80)   NOT NULL,
    APELLIDO_PATERNO VARCHAR(50)   NOT NULL,
    APELLIDO_MATERNO VARCHAR(50),
    FECHA_NACIMIENTO DATE          NOT NULL,
    SEXO             CHAR(1)       NOT NULL,
    TELEFONO         VARCHAR(15),
    EMAIL            VARCHAR(120),
    DIRECCION        VARCHAR(200),
    DISTRITO         VARCHAR(80),
    TIPO_SANGRE      VARCHAR(5),
    ALERGIAS         VARCHAR(500),
    OCUPACION        VARCHAR(100),
    SEGURO_SALUD     VARCHAR(50),
    CONTACTO_EMERGENCIA_NOMBRE  VARCHAR(100),
    CONTACTO_EMERGENCIA_TELEFONO VARCHAR(15),
    ACTIVO           INT           DEFAULT 1 NOT NULL,
    FECHA_REGISTRO   DATETIME2     DEFAULT SYSDATETIME() NOT NULL,
    CONSTRAINT PK_PACIENTE       PRIMARY KEY (ID_PACIENTE),
    CONSTRAINT UQ_PACIENTE_DNI   UNIQUE (DNI),
    CONSTRAINT FK_PAC_USUARIO    FOREIGN KEY (ID_USUARIO) REFERENCES USUARIO (ID_USUARIO),
    CONSTRAINT CK_PACIENTE_SEXO  CHECK (SEXO IN ('M', 'F')),
    CONSTRAINT CK_PACIENTE_DNI   CHECK (LEN(DNI) = 8 AND DNI NOT LIKE '%[^0-9]%'),
    CONSTRAINT CK_PACIENTE_ACTIVO CHECK (ACTIVO IN (0, 1))
);

-- 5) ESPECIALIDAD
CREATE TABLE ESPECIALIDAD (
    ID_ESPECIALIDAD  BIGINT         NOT NULL,
    NOMBRE           VARCHAR(80)    NOT NULL,
    DESCRIPCION      VARCHAR(300),
    PRECIO_CONSULTA  DECIMAL(10,2)  NOT NULL,
    DURACION_MINUTOS INT            DEFAULT 20 NOT NULL,
    ACTIVO           INT            DEFAULT 1 NOT NULL,
    CONSTRAINT PK_ESPECIALIDAD      PRIMARY KEY (ID_ESPECIALIDAD),
    CONSTRAINT UQ_ESPECIALIDAD_NOMB UNIQUE (NOMBRE),
    CONSTRAINT CK_ESPEC_PRECIO      CHECK (PRECIO_CONSULTA >= 0),
    CONSTRAINT CK_ESPEC_DURACION    CHECK (DURACION_MINUTOS BETWEEN 5 AND 240),
    CONSTRAINT CK_ESPEC_ACTIVO      CHECK (ACTIVO IN (0, 1))
);

-- 6) MEDICO
CREATE TABLE MEDICO (
    ID_MEDICO        BIGINT        NOT NULL,
    ID_USUARIO       BIGINT        NOT NULL,
    ID_ESPECIALIDAD  BIGINT        NOT NULL,
    CMP              VARCHAR(15)   NOT NULL,
    NOMBRES          VARCHAR(80)   NOT NULL,
    APELLIDO_PATERNO VARCHAR(50)   NOT NULL,
    APELLIDO_MATERNO VARCHAR(50),
    DNI              VARCHAR(8)    NOT NULL,
    TELEFONO         VARCHAR(15),
    EMAIL            VARCHAR(120),
    CONSULTORIO      VARCHAR(20),
    ACTIVO           INT           DEFAULT 1 NOT NULL,
    CONSTRAINT PK_MEDICO       PRIMARY KEY (ID_MEDICO),
    CONSTRAINT UQ_MEDICO_CMP   UNIQUE (CMP),
    CONSTRAINT UQ_MEDICO_DNI   UNIQUE (DNI),
    CONSTRAINT FK_MED_USUARIO  FOREIGN KEY (ID_USUARIO)      REFERENCES USUARIO (ID_USUARIO),
    CONSTRAINT FK_MED_ESPEC    FOREIGN KEY (ID_ESPECIALIDAD) REFERENCES ESPECIALIDAD (ID_ESPECIALIDAD),
    CONSTRAINT CK_MEDICO_DNI   CHECK (LEN(DNI) = 8 AND DNI NOT LIKE '%[^0-9]%'),
    CONSTRAINT CK_MEDICO_ACTIVO CHECK (ACTIVO IN (0, 1))
);

-- 7) HORARIO_MEDICO
CREATE TABLE HORARIO_MEDICO (
    ID_HORARIO  BIGINT       NOT NULL,
    ID_MEDICO   BIGINT       NOT NULL,
    DIA_SEMANA  INT          NOT NULL,
    HORA_INICIO VARCHAR(5)   NOT NULL,
    HORA_FIN    VARCHAR(5)   NOT NULL,
    ACTIVO      INT          DEFAULT 1 NOT NULL,
    CONSTRAINT PK_HORARIO_MEDICO PRIMARY KEY (ID_HORARIO),
    CONSTRAINT FK_HOR_MEDICO     FOREIGN KEY (ID_MEDICO) REFERENCES MEDICO (ID_MEDICO) ON DELETE CASCADE,
    CONSTRAINT CK_HOR_DIA        CHECK (DIA_SEMANA BETWEEN 1 AND 7),
    CONSTRAINT CK_HOR_ACTIVO     CHECK (ACTIVO IN (0, 1)),
    CONSTRAINT UQ_HORARIO_UNICO  UNIQUE (ID_MEDICO, DIA_SEMANA, HORA_INICIO)
);

-- 8) HISTORIA_CLINICA
CREATE TABLE HISTORIA_CLINICA (
    ID_HISTORIA    BIGINT        NOT NULL,
    ID_PACIENTE    BIGINT        NOT NULL,
    NRO_HISTORIA   VARCHAR(15)   NOT NULL,
    FECHA_APERTURA DATE          DEFAULT CAST(GETDATE() AS DATE) NOT NULL,
    OBSERVACIONES  VARCHAR(1000),
    ACTIVO         INT           DEFAULT 1 NOT NULL,
    CONSTRAINT PK_HISTORIA_CLINICA PRIMARY KEY (ID_HISTORIA),
    CONSTRAINT UQ_HC_PACIENTE      UNIQUE (ID_PACIENTE),
    CONSTRAINT UQ_HC_NRO           UNIQUE (NRO_HISTORIA),
    CONSTRAINT FK_HC_PACIENTE      FOREIGN KEY (ID_PACIENTE) REFERENCES PACIENTE (ID_PACIENTE) ON DELETE CASCADE,
    CONSTRAINT CK_HC_ACTIVO        CHECK (ACTIVO IN (0, 1))
);

-- 9) ANTECEDENTE
CREATE TABLE ANTECEDENTE (
    ID_ANTECEDENTE   BIGINT        NOT NULL,
    ID_HISTORIA      BIGINT        NOT NULL,
    TIPO             VARCHAR(30)   NOT NULL,
    DESCRIPCION      VARCHAR(500)  NOT NULL,
    CODIGO_CIE10     VARCHAR(10),
    FECHA_REGISTRO   DATE          DEFAULT CAST(GETDATE() AS DATE) NOT NULL,
    ACTIVO           INT           DEFAULT 1 NOT NULL,
    OBSERVACIONES    VARCHAR(500),
    CONSTRAINT PK_ANTECEDENTE      PRIMARY KEY (ID_ANTECEDENTE),
    CONSTRAINT FK_ANTEC_HISTORIA   FOREIGN KEY (ID_HISTORIA) REFERENCES HISTORIA_CLINICA (ID_HISTORIA) ON DELETE CASCADE,
    CONSTRAINT CK_ANTEC_TIPO       CHECK (TIPO IN ('PERSONALES','FAMILIARES','QUIRURGICOS','OBSTETRICOS','ALERGICOS','VACUNAS','HABITOS','OTROS')),
    CONSTRAINT CK_ANTEC_ACTIVO     CHECK (ACTIVO IN (0, 1))
);

-- 10) MEDICACION_ACTUAL
CREATE TABLE MEDICACION_ACTUAL (
    ID_MEDICACION    BIGINT        NOT NULL,
    ID_HISTORIA      BIGINT        NOT NULL,
    NOMBRE_MEDICAMENTO VARCHAR(150) NOT NULL,
    DOSIS            VARCHAR(80),
    FRECUENCIA       VARCHAR(80),
    VIA              VARCHAR(30),
    FECHA_INICIO     DATE,
    FECHA_FIN        DATE,
    INDICACIONES     VARCHAR(500),
    ACTIVO           INT           DEFAULT 1 NOT NULL,
    CONSTRAINT PK_MEDICACION_ACTUAL   PRIMARY KEY (ID_MEDICACION),
    CONSTRAINT FK_MEDACT_HISTORIA     FOREIGN KEY (ID_HISTORIA) REFERENCES HISTORIA_CLINICA (ID_HISTORIA) ON DELETE CASCADE,
    CONSTRAINT CK_MEDACT_ACTIVO       CHECK (ACTIVO IN (0, 1))
);

-- 11) CITA
CREATE TABLE CITA (
    ID_CITA         BIGINT        NOT NULL,
    ID_PACIENTE     BIGINT        NOT NULL,
    ID_MEDICO       BIGINT        NOT NULL,
    ID_ESPECIALIDAD BIGINT        NOT NULL,
    FECHA_CITA      DATE          NOT NULL,
    HORA_INICIO     VARCHAR(5)    NOT NULL,
    HORA_FIN        VARCHAR(5)    NOT NULL,
    ESTADO          VARCHAR(20)   DEFAULT 'PROGRAMADA' NOT NULL,
    MOTIVO_CONSULTA VARCHAR(300),
    CANAL_RESERVA   VARCHAR(20)   DEFAULT 'WEB' NOT NULL,
    CODIGO_QR       VARCHAR(100),
    NUMERO_TURNO    INT,
    FECHA_REGISTRO  DATETIME2     DEFAULT SYSDATETIME() NOT NULL,
    FECHA_CHECKIN   DATETIME2,
    OBSERVACIONES   VARCHAR(500),
    CONSTRAINT PK_CITA             PRIMARY KEY (ID_CITA),
    CONSTRAINT FK_CITA_PACIENTE    FOREIGN KEY (ID_PACIENTE)     REFERENCES PACIENTE (ID_PACIENTE),
    CONSTRAINT FK_CITA_MEDICO      FOREIGN KEY (ID_MEDICO)       REFERENCES MEDICO (ID_MEDICO),
    CONSTRAINT FK_CITA_ESPEC       FOREIGN KEY (ID_ESPECIALIDAD) REFERENCES ESPECIALIDAD (ID_ESPECIALIDAD),
    CONSTRAINT CK_CITA_ESTADO      CHECK (ESTADO IN ('PROGRAMADA','CONFIRMADA','EN_TRIAGE','EN_ATENCION','ATENDIDA','CANCELADA','NO_ASISTIO','REPROGRAMADA')),
    CONSTRAINT CK_CITA_CANAL       CHECK (CANAL_RESERVA IN ('WEB','TELEFONO','PRESENCIAL','APP')),
    CONSTRAINT UQ_CITA_MEDICO_SLOT UNIQUE (ID_MEDICO, FECHA_CITA, HORA_INICIO)
);

-- 10) TRIAJE
CREATE TABLE TRIAJE (
    ID_TRIAJE           BIGINT        NOT NULL,
    ID_CITA             BIGINT        NOT NULL,
    ID_ENFERMERA        BIGINT,
    FECHA_TRIAJE        DATETIME2     DEFAULT SYSDATETIME() NOT NULL,
    PRESION_ARTERIAL    VARCHAR(15),
    FRECUENCIA_CARDIACA INT,
    TEMPERATURA         DECIMAL(4,1),
    PESO_KG             DECIMAL(5,2),
    TALLA_CM            DECIMAL(5,2),
    SATURACION_O2       INT,
    GLUCOSA             DECIMAL(5,1),
    SINTOMAS            VARCHAR(500),
    ALERGIAS_REPORTADAS VARCHAR(500),
    MEDICACION_ACTUAL   VARCHAR(500),
    NIVEL_URGENCIA      VARCHAR(20),
    OBSERVACIONES       VARCHAR(1000),
    CONSTRAINT PK_TRIAJE        PRIMARY KEY (ID_TRIAJE),
    CONSTRAINT UQ_TRIAJE_CITA   UNIQUE (ID_CITA),
    CONSTRAINT FK_TRIAJE_CITA   FOREIGN KEY (ID_CITA)     REFERENCES CITA (ID_CITA),
    CONSTRAINT FK_TRIAJE_ENFER  FOREIGN KEY (ID_ENFERMERA) REFERENCES USUARIO (ID_USUARIO)
);

-- 12) DIAGNOSTICO_CIE10
CREATE TABLE DIAGNOSTICO_CIE10 (
    CODIGO      VARCHAR(10)  NOT NULL,
    DESCRIPCION VARCHAR(300) NOT NULL,
    CAPITULO    VARCHAR(80),
    ACTIVO      INT          DEFAULT 1 NOT NULL,
    CONSTRAINT PK_CIE10        PRIMARY KEY (CODIGO),
    CONSTRAINT CK_CIE10_ACTIVO CHECK (ACTIVO IN (0, 1))
);

-- 13) ATENCION
CREATE TABLE ATENCION (
    ID_ATENCION         BIGINT        NOT NULL,
    ID_CITA             BIGINT        NOT NULL,
    ID_HISTORIA         BIGINT        NOT NULL,
    ID_MEDICO           BIGINT        NOT NULL,
    FECHA_ATENCION      DATETIME2     DEFAULT SYSDATETIME() NOT NULL,
    MOTIVO_CONSULTA     VARCHAR(500),
    ANAMNESIS           VARCHAR(MAX),
    EXAMEN_FISICO       VARCHAR(MAX),
    DIAGNOSTICO_CIE10   VARCHAR(10),
    DIAGNOSTICO_DESC    VARCHAR(500),
    TRATAMIENTO         VARCHAR(MAX),
    OBSERVACIONES       VARCHAR(1000),
    PRESION_ARTERIAL    VARCHAR(15),
    FRECUENCIA_CARDIACA INT,
    TEMPERATURA         DECIMAL(4,1),
    PESO_KG             DECIMAL(5,2),
    TALLA_CM            DECIMAL(5,2),
    SATURACION_O2       INT,
    FIRMADO_POR         BIGINT,
    FECHA_FIRMA         DATETIME2,
    ACTIVO              INT            DEFAULT 1 NOT NULL,
    CONSTRAINT PK_ATENCION      PRIMARY KEY (ID_ATENCION),
    CONSTRAINT UQ_ATENCION_CITA UNIQUE (ID_CITA),
    CONSTRAINT FK_ATEN_CITA     FOREIGN KEY (ID_CITA)     REFERENCES CITA (ID_CITA),
    CONSTRAINT FK_ATEN_HISTORIA FOREIGN KEY (ID_HISTORIA) REFERENCES HISTORIA_CLINICA (ID_HISTORIA),
    CONSTRAINT FK_ATEN_MEDICO   FOREIGN KEY (ID_MEDICO)   REFERENCES MEDICO (ID_MEDICO),
    CONSTRAINT FK_ATEN_CIE10    FOREIGN KEY (DIAGNOSTICO_CIE10) REFERENCES DIAGNOSTICO_CIE10 (CODIGO),
    CONSTRAINT FK_ATEN_FIRMADOR FOREIGN KEY (FIRMADO_POR) REFERENCES USUARIO (ID_USUARIO)
);

-- 14) RECETA
CREATE TABLE RECETA (
    ID_RECETA     BIGINT        NOT NULL,
    ID_ATENCION   BIGINT        NOT NULL,
    NRO_RECETA    VARCHAR(20)   NOT NULL,
    FECHA_EMISION DATETIME2     DEFAULT SYSDATETIME() NOT NULL,
    OBSERVACIONES VARCHAR(500),
    CONSTRAINT PK_RECETA      PRIMARY KEY (ID_RECETA),
    CONSTRAINT UQ_RECETA_NRO  UNIQUE (NRO_RECETA),
    CONSTRAINT FK_RECETA_ATEN FOREIGN KEY (ID_ATENCION) REFERENCES ATENCION (ID_ATENCION) ON DELETE CASCADE
);

-- 15) DETALLE_RECETA
CREATE TABLE DETALLE_RECETA (
    ID_DETALLE         BIGINT        NOT NULL,
    ID_RECETA          BIGINT        NOT NULL,
    NOMBRE_GENERICO    VARCHAR(150)  NOT NULL,
    NOMBRE_COMERCIAL   VARCHAR(150),
    PRESENTACION       VARCHAR(80),
    DOSIS              VARCHAR(80)   NOT NULL,
    FRECUENCIA         VARCHAR(80)   NOT NULL,
    DURACION_DIAS      INT           NOT NULL,
    VIA_ADMINISTRACION VARCHAR(30),
    INDICACIONES       VARCHAR(500),
    CONSTRAINT PK_DETALLE_RECETA  PRIMARY KEY (ID_DETALLE),
    CONSTRAINT FK_DETREC_RECETA   FOREIGN KEY (ID_RECETA) REFERENCES RECETA (ID_RECETA) ON DELETE CASCADE,
    CONSTRAINT CK_DETREC_DURACION CHECK (DURACION_DIAS > 0)
);

-- 16) ORDEN_EXAMEN
CREATE TABLE ORDEN_EXAMEN (
    ID_ORDEN        BIGINT        NOT NULL,
    ID_ATENCION     BIGINT        NOT NULL,
    TIPO_EXAMEN     VARCHAR(30)   NOT NULL,
    NOMBRE_EXAMEN   VARCHAR(150)  NOT NULL,
    INDICACIONES    VARCHAR(500),
    ESTADO          VARCHAR(20)   DEFAULT 'SOLICITADO' NOT NULL,
    FECHA_SOLICITUD DATETIME2     DEFAULT SYSDATETIME() NOT NULL,
    FECHA_RESULTADO DATETIME2,
    CONSTRAINT PK_ORDEN_EXAMEN PRIMARY KEY (ID_ORDEN),
    CONSTRAINT FK_ORDEN_ATEN   FOREIGN KEY (ID_ATENCION) REFERENCES ATENCION (ID_ATENCION) ON DELETE CASCADE
);

-- 17) PAGO
CREATE TABLE PAGO (
    ID_PAGO          BIGINT         NOT NULL,
    ID_CITA          BIGINT         NOT NULL,
    MONTO            DECIMAL(10,2)  NOT NULL,
    METODO_PAGO      VARCHAR(20)    NOT NULL,
    ESTADO           VARCHAR(20)    DEFAULT 'PENDIENTE' NOT NULL,
    NRO_COMPROBANTE  VARCHAR(30),
    TIPO_COMPROBANTE VARCHAR(15),
    FECHA_PAGO       DATETIME2,
    FECHA_REGISTRO   DATETIME2      DEFAULT SYSDATETIME() NOT NULL,
    ACTIVO           INT            DEFAULT 1 NOT NULL,
    CONSTRAINT PK_PAGO        PRIMARY KEY (ID_PAGO),
    CONSTRAINT FK_PAGO_CITA   FOREIGN KEY (ID_CITA) REFERENCES CITA (ID_CITA),
    CONSTRAINT CK_PAGO_MONTO  CHECK (MONTO >= 0),
    CONSTRAINT CK_PAGO_METODO CHECK (METODO_PAGO IN ('EFECTIVO','TARJETA','YAPE','PLIN','TRANSFERENCIA')),
    CONSTRAINT CK_PAGO_ESTADO CHECK (ESTADO IN ('PENDIENTE','PAGADO','ANULADO','REEMBOLSADO'))
);

-- 18) AUDITORIA_LOG
CREATE TABLE AUDITORIA_LOG (
    ID_LOG     BIGINT        NOT NULL,
    ID_USUARIO BIGINT,
    USERNAME   VARCHAR(50),
    ACCION     VARCHAR(30)   NOT NULL,
    ENTIDAD    VARCHAR(50),
    ID_ENTIDAD VARCHAR(50),
    DETALLE    VARCHAR(2000),
    IP_ORIGEN  VARCHAR(45),
    FECHA_HORA DATETIME2     DEFAULT SYSDATETIME() NOT NULL,
    CONSTRAINT PK_AUDITORIA_LOG PRIMARY KEY (ID_LOG),
    CONSTRAINT FK_AUDIT_USUARIO FOREIGN KEY (ID_USUARIO) REFERENCES USUARIO (ID_USUARIO)
);

-- 19) INTENTO_LOGIN
CREATE TABLE INTENTO_LOGIN (
    ID_INTENTO    BIGINT        NOT NULL,
    USERNAME      VARCHAR(50)   NOT NULL,
    EXITOSO       INT           DEFAULT 0 NOT NULL,
    IP_ORIGEN     VARCHAR(45),
    MENSAJE_ERROR VARCHAR(255),
    FECHA_HORA    DATETIME2     DEFAULT SYSDATETIME() NOT NULL,
    CONSTRAINT PK_INTENTO_LOGIN PRIMARY KEY (ID_INTENTO)
);

-- 20) PASSWORD_RESET_TOKEN
CREATE TABLE PASSWORD_RESET_TOKEN (
    ID_TOKEN         BIGINT        NOT NULL,
    TOKEN            VARCHAR(255)  NOT NULL,
    ID_USUARIO       BIGINT        NOT NULL,
    FECHA_EXPIRACION DATETIME2     NOT NULL,
    USADO            INT           DEFAULT 0 NOT NULL,
    FECHA_CREACION   DATETIME2     DEFAULT SYSDATETIME() NOT NULL,
    CONSTRAINT PK_PASSWORD_RESET_TOKEN  PRIMARY KEY (ID_TOKEN),
    CONSTRAINT UQ_PRT_TOKEN             UNIQUE (TOKEN),
    CONSTRAINT FK_PRT_USUARIO           FOREIGN KEY (ID_USUARIO) REFERENCES USUARIO (ID_USUARIO),
    CONSTRAINT CK_PRT_USADO             CHECK (USADO IN (0, 1))
);

PRINT 'Esquema creado correctamente - 21 tablas + 19 secuencias';
GO
