@startuml
title "Modelo Conceptual - Diagrama de Clases\nSistema de Gestión de Citas Médicas"
skinparam backgroundColor #FEFEFE
skinparam class {
  BorderColor #2E86C1
  BackgroundColor #EBF5FB
  FontSize 11
}

class Usuario {
  -idUsuario: int <<PK>>
  -tipoDocumento: string
  -numeroDocumento: string
  -nombres: string
  -apellidos: string
  -correo: string
  -telefono: string
  -contrasena: string
  -rol: string
  -fechaRegistro: DateTime
  +autenticar(): bool
  +cambiarContrasena(): void
}

class Paciente {
  -idPaciente: int <<PK>>
  -tipoDoc: string
  -dni: string
  -nombres: string
  -apellidos: string
  -fechaNacimiento: Date
  -sexo: string
  -telefono: string
  -correo: string
  -direccion: string
  +buscarPorDNI(dni): Paciente
  +actualizarDatos(): void
}

class Cita {
  -idCita: int <<PK>>
  -fechaHora: DateTime
  -estado: string
  -motivo: string
  -tipoConsulta: string
  +agendar(): void
  +reprogramar(): void
  +cancelar(): void
  +confirmar(): void
}

class HistoriaClinica {
  -idHistoria: int <<PK>>
  -motivoConsulta: string
  -enfermedadActual: string
  -examenFisico: string
  -diagnosticoCIE10: string
  -planTratamiento: string
  -fechaRegistro: DateTime
  +registrarEvolucion(): void
  +imprimirResumen(): void
}

class Triaje {
  -idTriaje: int <<PK>>
  -presionArterialSist: int
  -presionArterialDiast: int
  -frecuenciaCardiaca: int
  -temperatura: decimal
  -peso: decimal
  -talla: decimal
  -saturacionOxigeno: int
  -fechaHora: DateTime
  +registrarSignosVitales(): void
}

class Receta {
  -idReceta: int <<PK>>
  -medicamento: string
  -dosis: string
  -duracion: string
  -indicaciones: string
  -fechaEmision: DateTime
  +generarPDF(): File
}

class Pago {
  -idPago: int <<PK>>
  -monto: decimal
  -impuesto: decimal
  -descuento: decimal
  -formaPago: string
  -fechaPago: DateTime
  -referencia: string
  -estado: string
  +procesarPago(): bool
  +generarComprobante(): File
  +anularPago(): void
}

class Auditoria {
  -idAuditoria: int <<PK>>
  -accion: string
  -modulo: string
  -detalle: string
  -fechaHora: DateTime
  -direccionIP: string
  -dispositivo: string
  +registrarEvento(): void
  +consultarLogs(filtros): List
}

class Espacio {
  -idEspacio: int <<PK>>
  -codigo: string
  -nombre: string
  -tipoEspacio: string
  -capacidad: int
  -estado: string
  -horaApertura: Time
  -horaCierre: Time
  +verificarDisponibilidad(): bool
  +ocupar(): void
  +liberar(): void
}

class Ubicacion {
  -idUbicacion: int <<PK>>
  -nombre: string
  -direccion: string
  -piso: string
  -edificio: string
}

class Precio {
  -idPrecio: int <<PK>>
  -tipoTarifa: string
  -monto: decimal
  -moneda: string
  -fechaInicioVigencia: Date
  -fechaFinVigencia: Date
  +calcularMonto(horas): decimal
}

class Caracteristica {
  -idCaracteristica: int <<PK>>
  -nombre: string
  -descripcion: string
  +asignarEspacio(): void
}

class Reserva {
  -idReserva: int <<PK>>
  -fechaInicio: DateTime
  -fechaFin: DateTime
  -estadoReserva: string
  -montoTotal: decimal
  -impuestos: decimal
  -descuentos: decimal
  +confirmarReserva(): void
  +cancelarReserva(): void
  +calcularTotal(): decimal
}

' Relaciones Clínicas
Usuario "1" -- "0..*" Cita : registra/gestiona >
Paciente "1" -- "1..*" Cita : solicita >
Paciente "1" -- "1..*" HistoriaClinica : posee >
Cita "1" -- "0..1" Triaje : tiene >
Cita "1" -- "0..*" Receta : genera >
Cita "1" -- "1..1" Pago : genera >
HistoriaClinica "1" -- "0..*" Receta : incluye >
Usuario "1" -- "0..*" Auditoria : registra >

' Relaciones de Espacios
Ubicacion "1" -- "1..*" Espacio : contiene >
Espacio "1" -- "0..*" Precio : tiene >
Espacio "0..*" -- "0..*" Caracteristica : posee >
Reserva "1" -- "1..*" Pago : genera >
Usuario "1" -- "0..*" Reserva : realiza >
Espacio "1" -- "0..*" Reserva : es reservado en >

@enduml